<resources>
    <string name="app_name">Chatting App</string>
    <string name="contact_image">Contact Image</string>
    <string name="akash">Akash</string>
    <string name="enter_your_message">Enter Your Message...</string>
    <string name="milan">Milan</string>
    <string name="todo">TODO</string>
    <string name="hii_milan">hii milan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_do">TODO</string>
    <string name="hii">Hii</string>
    <string name="hii_akash">Hii! Akash</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_an_account">Dont! Have An Account</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="please">Please</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="group_chat">Group Chat</string>
    <string name="milann">Milan</string>
    <string name="profile">profile</string>
    <string name="textview">TextView</string>
</resources>