<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup_login.Signup_page"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bt_shape"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:minWidth="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please"
                android:textColor="@color/white"
                android:textSize="40dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_semibold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Log In"
                android:textColor="@color/white"
                android:textSize="40dp">

            </TextView>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_rawRes="@raw/loginanim"
                app:lottie_loop="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="E-Mail"
                    android:background="@drawable/et_shape"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="30sp"
                    android:ems="10"
                    android:padding="15sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grayBackground"
                    android:id="@+id/textEmail">
                </EditText>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_marginBottom="30sp"
                    android:inputType="textPassword"
                    android:id="@+id/textPassword"
                    android:background="@drawable/et_shape"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grayBackground"
                    android:padding="15sp">
                </EditText>


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:gravity="center"
                android:id="@+id/tv_donthaveaccount"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:text="@string/log_in"
                android:background="@drawable/et_shape"
                app:backgroundTint="@color/gradient_color2"
                android:elevation="1dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                >
            </Button>

        </LinearLayout>
    </LinearLayout>
</ScrollView>