<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_chat_s"
    tools:context=".GroupChatActivity">
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_below="@+id/toolBar"
        android:id="@+id/chatRecycler"
        android:layout_above="@+id/linear"
        android:visibility="visible"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <EditText
            android:id="@+id/enterMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_et_message"
            android:ems="10"
            android:hint="@string/enter_your_message"
            android:textColorHint="#7B8085"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:minHeight="48dp"
            android:layout_marginBottom="5dp"
            android:padding="12dp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/sendButton"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/sendd"
            android:contentDescription="@string/todo" />

    </LinearLayout>
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolBar"
        android:background="@drawable/bt_shape"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backArrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.476"
                app:srcCompat="@drawable/leftarrowwhite"
                android:contentDescription="@string/to_do" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/profilePic"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:src="@drawable/prrofile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backArrow"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contact_name"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/milan"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profilePic"
                app:layout_constraintTop_toTopOf="parent"
                />


            <ImageView
                android:id="@+id/callpic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/phone"
                app:layout_constraintBottom_toBottomOf="@id/profilePic"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/menuct"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

</RelativeLayout>